Refactor account CRUD and login
